# Virtualization---FastAPI-Postgres

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  test_request.py
src/api/controllers/: task_manager.py
src/api/exceptions/: httpexception.py
src/api/middleware/: logmiddleware.py
src/api/routers/: tasks_rt.py
src/api/schema/: tasks.py
src/config/: postgres.py
src/storage/crud/: db_crud.py
src/storage/entities/: db_def.py
