[project]
name = "programacionavanzada"
version = "0.1.0"
description = "Practica PontIA Programacion Avanzada"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
